--- a/splitemapp-android/res/layout/fragment_add_people.xml
+++ b/splitemapp-android/res/layout/fragment_add_people.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ActivityGrayTheme"
+    style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -14,8 +14,7 @@
         android:id="@+id/ap_contacts_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:listSelector="@android:color/transparent"
-        android:background="@color/white" >
+        android:listSelector="@android:color/transparent">
     </ListView>
 
 </LinearLayout>
