--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -2,14 +2,12 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.    -->
     <style name="AppBaseTheme" parent="Theme.AppCompat">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+            backward-compatibility can go here.        -->
     </style>
 
     <!-- Application theme. -->
@@ -20,20 +18,7 @@
     <style name="NoActionBarTheme" parent="Theme.AppCompat">
         <item name="windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-    </style>
-
-    <style name="ActivityTheme" parent="Theme.AppCompat">
         <item name="android:background">@color/white</item>
-        <item name="android:adjustViewBounds">true</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:maxLines">1</item>
-    </style>
-
-    <style name="ActivityGrayTheme" parent="Theme.AppCompat">
-        <item name="android:background">@color/grey</item>
-        <item name="android:adjustViewBounds">true</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:maxLines">1</item>
     </style>
 
     <style name="CreateListEditText" parent="Theme.AppCompat">
@@ -59,7 +44,8 @@
     <style name="LoginEditText" parent="Theme.AppCompat">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">35dp</item>
-        <item name="android:paddingLeft">5dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:background">@drawable/edittext_background</item>
     </style>
@@ -68,11 +54,9 @@
         <item name="android:background">@color/white</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
         <item name="android:textColor">@color/seablue</item>
-        <item name="android:paddingTop">10dp</item>
-        <item name="android:paddingBottom">10dp</item>
-        <item name="android:paddingLeft">10dp</item>
-        <item name="android:paddingRight">0dp</item>
         <item name="android:textSize">15sp</item>
     </style>
 
@@ -84,12 +68,15 @@
     </style>
 
     <style name="Button" parent="Theme.AppCompat">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">30dp</item>
+        <item name="android:paddingRight">30dp</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:background">@color/blue</item>
+        <item name="android:background">@color/seablue</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:minHeight">30dp</item>
     </style>
 
 </resources>
