--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -73,7 +73,7 @@
         <item name="android:paddingLeft">30dp</item>
         <item name="android:paddingRight">30dp</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:background">@color/seablue</item>
+        <item name="android:background">@drawable/button_rounded_corners</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">18sp</item>
         <item name="android:minHeight">30dp</item>
