--- a/splitemapp-android/res/layout/fragment_create_account.xml
+++ b/splitemapp-android/res/layout/fragment_create_account.xml
@@ -5,13 +5,13 @@
     android:gravity="center_horizontal"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/ca_avatar_imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
-        android:contentDescription="@string/ca_avatar_description"
-        android:src="@drawable/avatar_placeholder" />
+<!--     <ImageView -->
+<!--         android:id="@+id/ca_avatar_imageView" -->
+<!--         android:layout_width="100dp" -->
+<!--         android:layout_height="100dp" -->
+<!--         android:layout_marginTop="20dp" -->
+<!--         android:contentDescription="@string/ca_avatar_description" -->
+<!--         android:src="@drawable/avatar_placeholder" /> -->
 
     <TextView
         style="@style/LoginTextView"
