--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="text">#ABBEDD</color>
     <color name="blue">#379AEA</color>
     <color name="seablue">#20BAE4</color>
+    <color name="strongblue">#1988A4</color>
     <color name="transparent">#80FFFFFF</color>
 
 </resources>
