Adapting application to use the latest appcompat library in which ActionBar was deprecated and we must use Toolbar everywhere.

--- a/splitemapp-android/res/values/styles.xml
+++ b/splitemapp-android/res/values/styles.xml
@@ -17,6 +17,7 @@
 
     <style name="NoActionBarTheme" parent="Theme.AppCompat">
         <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:background">@color/white</item>
     </style>
