--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="blue">#379AEA</color>
     <color name="seablue">#20BAE4</color>
     <color name="strongblue">#1988A4</color>
+    <color name="fabblue">#53A8FC</color>
     <color name="transparent">#80FFFFFF</color>
 
 </resources>
