--- a/splitemapp-android/res/values/colors.xml
+++ b/splitemapp-android/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="hard_grey">#878787</color>
     <color name="white">#FFFFFF</color>
     <color name="green">#90DD1E</color>
+    <color name="purple">#FC1169</color>
     <color name="text">#ABBEDD</color>
     <color name="blue">#379AEA</color>
     <color name="seablue">#20BAE4</color>
