--- a/splitemapp-android/res/layout/fragment_create_list.xml
+++ b/splitemapp-android/res/layout/fragment_create_list.xml
@@ -1,97 +1,78 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <include layout="@layout/action_bar" />
-
-    <TextView
-        style="@style/CreateListTextView"
-        android:text="@string/cl_list_name" />
-
-    <EditText
-        android:id="@+id/cl_list_name_editText"
-        style="@style/CreateListEditText"
-        android:inputType="text" />
-
-    <TextView
-        style="@style/CreateListTextView"
-        android:text="@string/cl_list_type" />
-
-    <Spinner
-        android:id="@+id/cl_list_type_spinner"
-        style="@style/CreateListSpinner" />
-
-    <TextView
-        style="@style/CreateListTextView"
-        android:text="@string/cl_list_budget" />
-
-    <EditText
-        android:id="@+id/cl_budget_editText"
-        style="@style/CreateListEditText"
-        android:drawableLeft="@drawable/dollar_sign"
-        android:drawablePadding="5dp"
-        android:drawableStart="@drawable/dollar_sign"
-        android:inputType="numberDecimal" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@color/white" />
-
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/cl_linearLayout"
+        style="@style/NoActionBarTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
+        <include layout="@layout/action_bar" />
+
         <TextView
-            android:id="@+id/cl_list_members_textView"
             style="@style/CreateListTextView"
-            android:layout_alignParentTop="true"
-            android:background="@color/grey"
-            android:text="@string/cl_list_members_list"
-            android:textColor="@color/hard_grey" />
+            android:text="@string/cl_list_name" />
 
-        <ListView
-            android:id="@+id/cl_users_listView"
+        <EditText
+            android:id="@+id/cl_list_name_editText"
+            style="@style/CreateListEditText"
+            android:inputType="text" />
+
+        <TextView
+            style="@style/CreateListTextView"
+            android:text="@string/cl_list_type" />
+
+        <Spinner
+            android:id="@+id/cl_list_type_spinner"
+            style="@style/CreateListSpinner" />
+
+        <TextView
+            style="@style/CreateListTextView"
+            android:text="@string/cl_list_budget" />
+
+        <EditText
+            android:id="@+id/cl_budget_editText"
+            style="@style/CreateListEditText"
+            android:drawableLeft="@drawable/dollar_sign"
+            android:drawablePadding="5dp"
+            android:drawableStart="@drawable/dollar_sign"
+            android:inputType="numberDecimal" />
+
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/cl_list_members_textView"
-            android:background="@color/white" >
-        </ListView>
+            android:layout_height="10dp"
+            android:background="@color/white" />
+    </LinearLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            app:backgroundTint="@color/fabblue"
-            android:src="@drawable/white_plus"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp" />
+    <TextView
+        android:id="@+id/cl_list_members_textView"
+        style="@style/CreateListTextView"
+        android:layout_below="@id/cl_linearLayout"
+        android:background="@color/grey"
+        android:text="@string/cl_list_members_list"
+        android:textColor="@color/hard_grey" />
 
-        <!-- <TextView -->
-        <!-- android:id="@id/cl_add_people_textView" -->
-        <!-- android:layout_width="match_parent" -->
-        <!-- android:layout_height="50dp" -->
-        <!-- android:layout_alignParentBottom="true" -->
-        <!-- android:background="@color/white" -->
-        <!-- android:drawableEnd="@drawable/plus_sign_white" -->
-        <!-- android:drawablePadding="10dp" -->
-        <!-- android:drawableRight="@drawable/plus_sign_white" -->
-        <!-- android:gravity="center_vertical|end" -->
-        <!-- android:paddingEnd="20dp" -->
-        <!-- android:paddingLeft="20dp" -->
-        <!-- android:paddingRight="20dp" -->
-        <!-- android:paddingStart="20dp" -->
-        <!-- android:text="@string/cl_list_add_people" -->
-        <!-- android:textColor="@color/blue" -->
-        <!-- android:textSize="20sp" /> -->
-    </RelativeLayout>
+    <ListView
+        android:id="@+id/cl_users_listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cl_list_members_textView"
+        android:background="@color/white" >
+    </ListView>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/cl_fab"
+        style="@style/MainFAB"
+        android:layout_alignParentBottom="true"
+        app:backgroundTint="@color/fabblue"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:pressedTranslationZ="12dp" />
+
+</RelativeLayout>
