--- a/splitemapp-android/res/drawable-xhdpi/action_fab.xml
+++ b/splitemapp-android/res/drawable-xhdpi/action_fab.xml
@@ -1,8 +1,8 @@
 <android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/lib/android.support.design.widget"
     android:src="@drawable/white_plus"
-    app:backgroundTint="@color/blue"
-    app:borderWidth="0dp"
-    app:elevation="6dp"
-    app:fabSize="mini"
-    app:pressedTranslationZ="12dp" />
+    fab:backgroundTint="@color/blue"
+    fab:borderWidth="0dp"
+    fab:elevation="6dp"
+    fab:fabSize="mini"
+    fab:pressedTranslationZ="12dp" />
