Defining a new dimension for the project cover image height. Using the above dimension for all the methods that work with the cover image. Adding convenience methods to the Base Fragment Updating calls to the openImageSelectod method in Create List and Project fragments

--- a/splitemapp-android/res/layout/fragment_project.xml
+++ b/splitemapp-android/res/layout/fragment_project.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/imagelayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp" >
+        android:layout_height="@dimen/project_cover_image_height" >
 
         <ImageView
             android:id="@+id/p_project_cover_image_imageView"
