--- a/splitemapp-android/res/layout/fragment_create_list.xml
+++ b/splitemapp-android/res/layout/fragment_create_list.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/lib/android.support.design.widget"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -69,10 +69,10 @@
         android:id="@+id/cl_fab"
         style="@style/MainFAB"
         android:layout_alignParentBottom="true"
-        fab:backgroundTint="@color/fabblue"
-        fab:borderWidth="0dp"
-        fab:elevation="6dp"
-        fab:fabSize="normal"
-        fab:pressedTranslationZ="12dp" />
+        app:backgroundTint="@color/fabblue"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:pressedTranslationZ="12dp" />
 
 </RelativeLayout>
