--- a/splitemapp-android/res/layout/fragment_welcome.xml
+++ b/splitemapp-android/res/layout/fragment_welcome.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +15,12 @@
         android:id="@+id/w_tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/seablue" />
+        android:background="@color/seablue"
+        app:tabIndicatorColor="@color/purple"
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextAppearance="@style/CustomTabTextAppearance"
+        app:tabTextColor="@color/darkblue"
+        app:tabIndicatorHeight="4dp" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/w_viewPager"
