Updating home fragment to match design, lots of fun changes :D

--- a/splitemapp-android/res/layout/fragment_add_people.xml
+++ b/splitemapp-android/res/layout/fragment_add_people.xml
@@ -7,7 +7,7 @@
     <include layout="@layout/action_bar"/>
     
     <TextView
-        style="@style/CreateListTextView"
+        style="@style/CustomTextView"
         android:text="@string/ap_contacts" />
 
     <ListView
