--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -7,41 +8,44 @@
         android:id="@+id/h_topLayout"
         style="@style/NoActionBarTheme"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
+        android:background="@drawable/home_background"
         android:layout_alignParentTop="true" >
 
         <ImageView
             android:id="@+id/h_avatar_imageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:contentDescription="@string/h_avatar_description"
-            android:padding="10dp"
             android:src="@drawable/avatar_placeholder" />
-
-        <TextView
-            android:id="@+id/h_full_name_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_toEndOf="@id/h_avatar_imageView"
-            android:layout_toRightOf="@id/h_avatar_imageView"
-            android:text="@string/h_name"
-            android:textColor="@color/black"
-            android:textSize="28sp" />
 
         <TextView
             android:id="@+id/h_email_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/h_full_name_textView"
+            android:layout_alignBottom="@id/h_avatar_imageView"
             android:layout_toEndOf="@id/h_avatar_imageView"
             android:layout_toRightOf="@id/h_avatar_imageView"
             android:text="@string/h_email"
             android:textColor="@color/grey"
+            android:textSize="12sp" />
+        
+        <TextView
+            android:id="@+id/h_full_name_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/h_email_textView"
+            android:layout_toEndOf="@id/h_avatar_imageView"
+            android:layout_toRightOf="@id/h_avatar_imageView"
+            android:text="@string/h_name"
+            android:textColor="@color/black"
             android:textSize="20sp" />
     </RelativeLayout>
 
@@ -49,16 +53,16 @@
         android:id="@+id/h_projects_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/h_new_list_button"
         android:layout_below="@id/h_topLayout" />
 
-    <Button
-        android:id="@id/h_new_list_button"
-        style="@style/Button"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/h_fab"
+        style="@style/MainFAB"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/h_new_list_button" />
+        app:backgroundTint="@color/fabblue"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:pressedTranslationZ="12dp" />
 
 </RelativeLayout>
