--- a/splitemapp-android/res/layout/list_item_project.xml
+++ b/splitemapp-android/res/layout/list_item_project.xml
@@ -1,31 +1,71 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    style="@style/Theme.AppCompat"
+<!-- A CardView that contains a RelativeLayout -->
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="0dp"
+    app:cardElevation="0dp" >
 
-    <!-- A CardView that contains a TextView -->
-
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start" >
+        android:layout_height="match_parent" >
+
+        <ImageView
+            android:id="@+id/h_project_cover_imageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:contentDescription="@string/h_project_cover_description"
+            android:src="@drawable/category_placeholder" />
 
         <TextView
             android:id="@+id/h_project_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:drawableLeft="@drawable/list_item_project"
-            android:drawablePadding="5dp"
-            android:drawableStart="@drawable/list_item_project"
-            android:padding="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@id/h_project_cover_imageView"
+            android:layout_toRightOf="@id/h_project_cover_imageView"
+            android:text="@string/h_project_title"
             android:textColor="@color/black"
-            android:textSize="22sp" />
+            android:textSize="16sp" />
         
-    </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/h_project_total_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/h_project_title"
+            android:layout_toEndOf="@id/h_project_cover_imageView"
+            android:layout_toRightOf="@id/h_project_cover_imageView"
+            android:text="@string/h_project_total"
+            android:textColor="@color/grey"
+            android:textSize="12sp" />
+        
+        <TextView
+            android:id="@+id/h_project_total_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/h_project_title"
+            android:layout_toEndOf="@id/h_project_total_label"
+            android:layout_toRightOf="@id/h_project_total_label"
+            android:text="@string/h_project_total_value"
+            android:textColor="@color/grey"
+            android:textSize="12sp" />
 
-</LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@id/h_project_cover_imageView"
+            android:layout_toRightOf="@id/h_project_cover_imageView"
+            android:background="@color/grey" />
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
