Separating the get total expense by project id into one part that goes in the DAO and another that goes in the BaseFragment. Updating the project fragment a little bit. Still need to adapt the project image size to the new format of the fragment.

--- a/splitemapp-android/res/layout/fragment_home.xml
+++ b/splitemapp-android/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
         android:id="@+id/h_topLayout"
         style="@style/NoActionBarTheme"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="@dimen/home_image_height"
         android:background="@drawable/home_background"
         android:layout_alignParentTop="true" >
 
