--- a/splitemapp-android/res/values/dimens.xml
+++ b/splitemapp-android/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     
     <!-- Fixed dimensions to be referenced from anywhere in the application. -->
-    <dimen name="project_cover_image_height">100dp</dimen>
+    <dimen name="project_cover_image_height">180dp</dimen>
+    <dimen name="home_image_height">180dp</dimen>
 
 </resources>
