--- a/splitemapp-android/res/layout/action_bar.xml
+++ b/splitemapp-android/res/layout/action_bar.xml
@@ -15,7 +15,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/seablue"
-            android:padding="10dp" >
+            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingRight="10dp"
+            android:paddingEnd="10dp" >
 
             <TextView
                 android:id="@+id/cancel_action"
@@ -30,7 +33,7 @@
                 android:text="@string/ab_title"
                 android:textColor="@color/white"
                 android:background="@color/seablue"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/done_action"
@@ -41,7 +44,7 @@
                 android:text="@string/ab_done"
                 android:textColor="@color/white"
                 android:background="@color/seablue"
-                android:textSize="22sp" />
+                android:textSize="18sp" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
