Replacing list for RecyclerView in Project view for User Expenses Wrapping the user expense items inside a card view Using a RecyclerView within a RecyclerView for the user expense listing Adding some new strings

--- a/splitemapp-android/res/layout/action_bar.xml
+++ b/splitemapp-android/res/layout/action_bar.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/seablue"
+        android:layout_marginTop="-5dp"
+        android:layout_marginBottom="-5dp"
         app:contentInsetStart="0dp" >
 
         <RelativeLayout
