--- a/splitemapp-android/res/layout/fragment_project.xml
+++ b/splitemapp-android/res/layout/fragment_project.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/NoActionBarTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +8,7 @@
     <RelativeLayout
         android:id="@+id/imagelayout"
         android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_height="@dimen/project_cover_image_height" >
 
         <ImageView
@@ -30,22 +32,24 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/p_expense_list_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.60"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imagelayout"
         android:background="@color/white" />
 
-    <!-- <ListView -->
-    <!-- android:id="@+id/p_expense_list_listView" -->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/p_fab"
+        style="@style/MainFAB"
+        android:layout_alignParentBottom="true"
+        app:backgroundTint="@color/fabblue"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:pressedTranslationZ="12dp" />
+
+    <!-- <Button -->
+    <!-- android:id="@+id/p_add_expense_button" -->
+    <!-- style="@style/Button" -->
     <!-- android:layout_width="match_parent" -->
-    <!-- android:layout_height="0dp" -->
-    <!-- android:layout_weight="0.60" -->
-    <!-- android:background="@color/white" > -->
-    <!-- </ListView> -->
+    <!-- android:text="@string/p_add_expense_button" /> -->
 
-    <Button
-        android:id="@+id/p_add_expense_button"
-        style="@style/Button"
-        android:layout_width="match_parent"
-        android:text="@string/p_add_expense_button" />
-
-</LinearLayout>
+</RelativeLayout>
